feat: added wiki fields to admin areas single feature api. Updated documentation
