# app/Http/Controllers/AdminAreaController.php
@@ -127,10 +127,14 @@ class AdminAreaController extends Controller
     {
         $adminArea = AdminArea::where('id', $id)->first();
 
-        if (! $adminArea) {
+        if (!$adminArea) {
             return response()->json(['message' => 'Admin Area non trovato'], 404);
         }
         $geom = DB::select('SELECT ST_AsGeoJSON(?) AS geojson', [$adminArea->geom])[0]->geojson;
+        $wikidataUrl = $adminArea->getWikidata() !== null ? 'https://www.wikidata.org/wiki/' . $adminArea->getWikidata() : null;
+        $wikipediaUrl = $adminArea->getWikipedia() !== null ? 'https://it.wikipedia.org/wiki/' . $adminArea->getWikipedia() : null;
+        $wikimediaCommonsUrl = $adminArea->getWikimediaCommons() !== null ? 'https://commons.wikimedia.org/wiki/' . $adminArea->getWikimediaCommons() : null;
+
 
         match ($adminArea->osm_type) {
             'R' => $osmType = 'relation',
@@ -141,10 +145,12 @@ class AdminAreaController extends Controller
         $properties = $adminArea->toArray();
         unset($properties['geom']);
         unset($properties['tags']);
-        $properties['osm_url'] = 'https://www.openstreetmap.org/'.$osmType.'/'.$adminArea->osm_id;
-        $properties['osm_api'] = 'https://www.openstreetmap.org/api/0.6/'.$osmType.'/'.$adminArea->osm_id.'.json';
+        $properties['osm_url'] = 'https://www.openstreetmap.org/' . $osmType . '/' . $adminArea->osm_id;
+        $properties['osm_api'] = 'https://www.openstreetmap.org/api/0.6/' . $osmType . '/' . $adminArea->osm_id . '.json';
         $properties['osm_tags'] = json_decode($adminArea->tags, true);
-
+        $properties['wikipedia'] = $wikipediaUrl;
+        $properties['wikidata'] = $wikidataUrl;
+        $properties['wikimedia_commons'] = $wikimediaCommonsUrl;
         $geojsonFeature = [
             'type' => 'Feature',
             'properties' => $properties,
