# storage/api-docs/api-docs.json
@@ -160,6 +160,18 @@
                                                 "osm_tags": {
                                                     "type": "json",
                                                     "description": "OSM tags of the object"
+                                                },
+                                                "wikipedia": {
+                                                    "type": "string",
+                                                    "description": "Wikipedia link for the area"
+                                                },
+                                                "wikidata": {
+                                                    "type": "string",
+                                                    "description": "Wikidata link for the area"
+                                                },
+                                                "wikimedia_commons": {
+                                                    "type": "string",
+                                                    "description": "Wikimedia Commons link for the area"
                                                 }
                                             },
                                             "type": "object"
@@ -184,7 +196,10 @@
                                             "osm_tags": {
                                                 "type": "boundary",
                                                 "boundary": "administrative"
-                                            }
+                                            },
+                                            "wikipedia": "https://en.wikipedia.org/wiki/Example",
+                                            "wikidata": "https://www.wikidata.org/wiki/Q123456",
+                                            "wikimedia_commons": "https://commons.wikimedia.org/wiki/Category:Example"
                                         },
                                         "geometry": {
                                             "type": "Polygon",
